<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/textNameJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/name"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textPositionJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/position"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textNameJob" />

    <Button
        android:id="@+id/textStartJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:text="@string/start_work"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textPositionJob" />

    <Button
        android:id="@+id/textFinishJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:text="@string/finish_work"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textStartJob" />

    <EditText
        android:id="@+id/textLinkJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/link"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textFinishJob" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newpost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_ok_24" />


</androidx.constraintlayout.widget.ConstraintLayout>