<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.FeedFragment">

    <Button
        android:id="@+id/bigButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatarka"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/likes"
        android:textSize="16dp"
        app:icon="@drawable/ic_baseline_star_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />


    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nmedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/author_name"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,authorName" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="url" />

    <TextView
        android:id="@+id/amountReposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reposts"
        app:layout_constraintBottom_toBottomOf="@id/reposts"
        app:layout_constraintStart_toEndOf="@+id/reposts"
        app:layout_constraintTop_toTopOf="@id/reposts" />


    <ImageButton
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        app:srcCompat="@drawable/ic_baseline_comments" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/reposts"
        style="@style/Widget.RepostCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textSize="16dp"
        app:icon="@drawable/ic_baseline_repost"
        app:layout_constraintStart_toEndOf="@id/comments"
        app:layout_constraintTop_toBottomOf="@id/barrier1" />


    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/reposts"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        app:srcCompat="@drawable/ic_baseline_views" />

    <TextView
        android:id="@+id/amountViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        app:layout_constraintBottom_toBottomOf="@id/reposts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/views"
        app:layout_constraintTop_toTopOf="@id/reposts" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.EditCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintBottom_toBottomOf="@id/authorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authorName" />

    <ImageButton
        android:id="@+id/attachmentImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/art_kartinka" />

    <VideoView
        android:id="@+id/attachmentVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/art_kartinka" />

    <ImageButton
        android:id="@+id/attachmentAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/ic_baseline_play_circle_24" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000ff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/attachmentImage" />


</androidx.constraintlayout.widget.ConstraintLayout>


